[package]
name = "aerospike_async"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_aerospike_async_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", default-features = false }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = "1.40"
aerospike-core = { git = "https://github.com/aerospike/aerospike-client-rust", branch = "v2", package = "aerospike-core", features = ["rt-tokio"] }
hex = "0.4"
ordered-float = { version = "3", default-features = false }
pyo3-stub-gen = "0.14.1"
log = "0.4"
futures = "0.3"
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "1.0", optional = true }
# Pin aws-lc-sys to 0.36.0 to avoid cross-compilation issues with 0.37.0
# See: https://github.com/aws/aws-lc-rs/issues (aarch64 __ARM_ARCH build errors)
# Note: bindgen feature is NOT enabled because:
# - armv7 builds are disabled (no libclang in manylinux Docker)
# - Other targets (x86_64, x86, aarch64) have pre-generated bindings and don't need bindgen
aws-lc-sys = "0.36.0"

[features]
default = ["extension-module", "tls"]
extension-module = ["pyo3/extension-module"]
tls = ["aerospike-core/tls", "tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[profile.release]
strip = "debuginfo"
