[build-system]
requires = ["maturin>=1.9.0,<2.0"]
build-backend = "maturin"

[project]
name = "aerospike_async"
version = "0.2.0"
requires-python = ">=3.10"
py-modules = ["aerospike_async"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest]
log_cli = true
log_cli_level = "DEBUG"

[tool.pytest.ini_options]
asyncio_mode = "auto"
