[build-system]
requires = ["maturin>=1.9.0,<2.0"]
build-backend = "maturin"

[project]
name = "aerospike_client_python_async"
version = "0.3.0-alpha.1"
requires-python = ">=3.10"
python-packages = ["aerospike_async"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "aerospike_async._aerospike_async_native"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s"
log_cli = true
log_cli_level = "DEBUG"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
